have fixed every overflow exept the make report fot the anonymous user, it wont just fix. also added forgot password link

--- a/src/pages/landingPage/landing.css
+++ b/src/pages/landingPage/landing.css
@@ -1,3 +1,7 @@
+.landingPageContainer{
+	overflow-x: hidden;
+}
+
 /* fOR THE IMAGE ON THE LANDING PAGE */
 .hero-image {
 	padding-top: 0.5rem;
